Simplified logic in Blink that detects clickable elements and added more roles that should be marked as clickable.

Bug: 757592
R=dmazzoni@chromium.org
TESTED=Manually with some roles, Layout test

Change-Id: Iae296aebc5615d3fb798b282b44acf16f01c12ae
Reviewed-on: https://chromium-review.googlesource.com/624835
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496848}
Former-commit-id: 3c944b9a8936705ca717477395531942ca02f641